<resources>
    <string name="app_name">Duoc Tong</string>
    <string name="app_hotline">0913 100 377</string>
    <string name="app_website">www.tiha.vn</string>
    <string name="app_website_customer">www.tiha.vn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TiHa</string>
    <string name="nav_header_subtitle">support@tiha.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_tieudeform">TIHA.VN -</string>
    <string name="login_txt_servernamecty">demo.tiha.vn</string>
    <string name="menu_banhang">Đơn hàng</string>
    <string name="menu_nhanvien">Nhân viên</string>
    <string name="menu_khachhang">Khách hàng</string>
    <string name="menu_hanghoa">Sản phẩm</string>
    <string name="menu_vattu">Vật tư</string>
    <string name="menu_baocao">Báo cáo</string>
    <string name="menu_tongquan">Tổng quan</string>
    <string name="menu_giaonhan">Giao nhận</string>
    <string name="menu_cauhinh">Cấu hình</string>
    <string name="menu_loaihang">Loại hàng</string>
    <string name="btn_filter">Lọc</string>
    <string name="tap_to_reload">Nhấn để tải lại</string>
    <string name="error_msg">Rất tiếc! không thể tải dữ liệu</string>
    <string name="btn_retry">Thử lại</string>
    <string name="error_msg_unknown">Đã xảy ra lỗi không mong muốn</string>
    <string name="error_msg_no_internet">Vui lòng kiểm tra kết nối và thử lại.</string>
    <string name="title_error_msg">LỖI</string>
    <string name="title_not_error_msg">Thông báo</string>
    <string name="dialog_btn_ok">ĐỒNG Ý</string>
    <string name="dialog_btn_cancel">HỦY</string>
    <string name="map_tieudeform">Bản đồ</string>
    <string name="map_et_hint_origin">Điểm đi</string>
    <string name="map_et_hint_destination">Điểm đến</string>
    <string name="google_maps_key">AIzaSyBu86Xy64zcwMiKCLbsDbjPHQ9iG_5TBh0</string>
    <string-array name="letter_tile_colors">
        <item>#f16364</item>
        <item>#67bf74</item>
        <item>#2093cd</item>
        <item>#696969</item>
        <item>#f58559</item>
        <item>#f9a43e</item>
        <item>#e4c62e</item>
        <item>#59a2be</item>
        <item>#ad62a7</item>
        <item>#8775B9</item>
        <item>#97E8C6</item>
        <item>#FFB57B</item>
        <item>#7ABFE7</item>
    </string-array>
    <string name="chonkholist_et_hint_timkiem">Tìm kiếm kho</string>
    <string name="chonkholist_btn_txt_apdung">ÁP DỤNG</string>
    <string name="chonkholist_tieudeform">Chọn kho</string>
    <string name="chonsplist_tieudeform">Chọn sản phẩm</string>
    <string name="chonloaihanglist_btn_txt_apdung">ÁP DỤNG</string>
    <string name="chonloaihanglist_et_hint_timkiem">Tìm kiếm loại hàng</string>
    <string name="chonloaihanglist_tieudeform">Chọn loại hàng</string>
    <string name="report_col_nhomkhachhang">Nhóm KH</string>
    <string name="report_col_makhachhang">Mã khách hàng</string>
    <string name="report_col_tenkhachhang">Tên khách hàng</string>
    <string name="nav_title_cuocgoi">Cuộc gọi</string>
    <string name="nav_title_khachhang">Khách hàng</string>
    <string name="nav_title_donhang">Đơn hàng</string>
    <string name="nav_title_baocao">Báo cáo</string>
    <string name="nav_title_more">Thêm</string>
    <string name="cauhinh_et_hint_sodienthoai">Nhập số điện thoại...</string>
    <string name="dialog_nhapsodienthoai">Nhập số điện thoại</string>
    <string name="baocao_tieudeform">BÁO CÁO</string>
    <string name="dashboard_tieudeform">DASHBOARD</string>
    <string name="dashboard_txt_doanhthu">Doanh thu</string>
    <string name="dashboard_txt_tongdonhang">Số đơn hàng</string>
    <string name="dashboard_txt_tongloinhuan">Lãi gộp</string>
    <string name="dashboard_txt_tongkhachhang">Lượt khách</string>
    <string name="dashboard_txt_quytienmat">Quỹ tiền mặt</string>
    <string name="dashboard_txt_quynganhang">Quỹ ngân hàng</string>
    <string name="colTenHang">Tên sản phẩm</string>
    <string name="colSoLuongXuat">SL xuất</string>
    <string name="colSoLuongTon">SL tồn</string>
    <string name="totalTongSanPham">Tổng sản phẩm</string>
    <string name="dialog_nhapthoigianbaocao">Chọn ngày xem</string>
    <string name="thongkechitietnhaphang_edittext_hint_timkiem">Tìm kiếm phiếu nhập</string>
    <string name="colNgay">Ngày</string>
    <string name="colSoCT">Số phiếu</string>
    <string name="colTenKhachHang">Tên khách hàng</string>
    <string name="colDiaChi">Địa chỉ</string>
    <string name="colDDBH">Nhân viên bán hàng</string>
    <string name="colTenKho">Kho</string>
    <string name="colDVT">ĐVT</string>
    <string name="colSoLuong">Số lượng</string>
    <string name="colDonGia">Đơn giá</string>
    <string name="colThanhTien">Thành tiền</string>
    <string name="colTongSoDong">Tổng số dòng</string>
    <string name="totalTongKhachHang">Tổng khách hàng</string>
    <string name="thongkecongno_edittext_hint_timkiem">Tìm kiếm khách hàng</string>
    <string name="colPhaiThu">Phải thu</string>
    <string name="colPhaiTra">Phải trả</string>
    <string name="colNhomKhachHang">Nhóm khách hàng</string>
    <string name="colMaKhachHang">Mã khách hàng</string>
    <string name="colDauKy">Đầu kỳ</string>
    <string name="colPSNhap">Nhập</string>
    <string name="colPSXuat">Xuất</string>
    <string name="colPSThu">Thu</string>
    <string name="colPSChi">Chi</string>
    <string name="colCuoiKy">Cuối kỳ</string>
    <string name="colNoCuoiKy">Nợ cuối kỳ</string>
    <string name="doanhsobanhangtheocn_edittext_hint_timkiem">Tìm kiếm chi nhánh</string>
    <string name="colChiNhanh">Chi nhánh</string>
    <string name="congno_et_hint_timkiem">Tìm kiếm khách hàng</string>
    <string name="totalTongChiNhanh">Tổng chi nhánh</string>
    <string name="doanhsobanhangtheokh_edittext_hint_timkiem">Tìm kiếm khách hàng</string>
    <string name="doanhsobanhangtheoddbh_edittext_hint_timkiem">Tìm kiếm nhân viên</string>
    <string name="colTenNhanVien">Tên nhân viên</string>
    <string name="totalTongNhanVien">Tổng</string>
    <string name="thongkebanhang_edittext_hint_timkiem">Tìm kiếm phiếu xuất</string>
    <string name="colSoTien">Số tiền</string>
    <string name="colTongSoPhieu">Tổng số phiếu</string>
    <string name="thongkenhaphang_edittext_hint_timkiem">Tìm kiếm phiếu nhập</string>
    <string name="colLoaiPhieu">Loại phiếu</string>
    <string name="colSoPhieu">Số phiếu</string>
    <string name="colSoLuongNhap">Số lượng nhập</string>
    <string name="totalTongSoDong">Tổng số dòng</string>
    <string name="thongkecuocgoi_edittext_hint_timkiem">Tìm kiếm cuộc gọi</string>
    <string name="colThoiGianNhan">TG nhận</string>
    <string name="colDienThoai">Điện thoại</string>
    <string name="colSanPhamMua">Sản phẩm mua</string>
    <string name="colTienHang">Tiền hàng</string>
    <string name="colTienThu">Tiền thu</string>
    <string name="totalTongCuocGoi">Tổng số cuộc gọi</string>
    <string name="thongketonnuoc_edittext_hint_timkiem">Tìm kiếm sản phẩm</string>
    <string name="colMaHang">Mã sản phẩm</string>
    <string name="colTonKhoDauKy">Đầu kỳ</string>
    <string name="colTonKhoPSNhap">Nhập</string>
    <string name="colTonKhoPSXuat">Xuất</string>
    <string name="colTonKhoPSChuyenDen">Chuyển đến</string>
    <string name="colTonKhoPSChuyenDi">Chuyển đi</string>
    <string name="colTonKhoCuoiKy">Cuối kỳ</string>
    <string name="colNuoc">Nước</string>
    <string name="colVo">Vỏ</string>
    <string name="colPhaiThuDK">Phải thu ĐK</string>
    <string name="colPhaiTraDK">Phải trả ĐK</string>
    <string name="colPhaiThuCK">Phải thu CK</string>
    <string name="colPhaiTraCK">Phải trả CK</string>
    <string name="title_button_clear">Xóa</string>
    <string name="nhapsoluong_txt_masanpham">Mã sản phẩm</string>
    <string name="nhapsoluong_txt_tensanpham">Tên sản phẩm</string>
    <string name="nhapsoluong_txt_donvitinh">Đơn vị tính</string>
    <string name="nhapsoluong_txt_tonkho">Tồn kho</string>
    <string name="nhapsoluong_txt_soluong">Số lượng</string>
    <string name="nhapsoluong_txt_dongia">Đơn giá</string>
    <string name="nhapsoluong_txt_chietkhau">Chiết khấu</string>
    <string name="nhapsoluong_txt_thanhtien">Thành tiền</string>
    <string name="nhapsoluong_txt_ghichu">Ghi chú</string>
    <string name="nhapsoluong_tieudeform">Nhập số lượng sản phẩm</string>
    <string name="giaohangform">Phiếu giao hàng</string>
    <string name="login_btn_dangnhap">ĐĂNG NHẬP</string>
    <string name="login_et_hint_matkhau">Mật khẩu</string>
    <string name="login_txt_matkhau">Mật khẩu</string>
    <string name="login_et_hint_tendangnhap">Tên đăng nhập</string>
    <string name="login_txt_tendangnhap">Tên đăng nhập</string>
    <string name="phieubansi_et_hint_timkiem">Tìm kiếm sản phẩm</string>
    <string name="phieubansi_txt_tongsl">Tổng số lượng:</string>
    <string name="phieubansi_txt_tongtienhang">Tổng tiền hàng:</string>
    <string name="phieubansi_txt_tongchietkhau">Tổng chiết khấu:</string>
    <string name="phieubansi_txt_khachhang">Tên khách hàng</string>
    <string name="phieubansi_txt_ddnguoimua">Người mua</string>
    <string name="phieubansi_et_hint_khachhang">Chọn khách hàng</string>
    <string name="phieubansi_et_hint_nhapkhachhang">Nhập khách hàng</string>
    <string name="phieubansi_et_hint_nhapKH">Nhập tên khách hàng</string>
    <string name="phieubansi_txt_nvbh">Nhân viên bán hàng</string>
    <string name="phieubansi_et_hint_nvbg">Chọn nhân viên bán hàng</string>
    <string name="phieubansi_txt_nvgh">Nhân viên giao hàng</string>
    <string name="phieubansi_et_hint_nvgh">Chọn nhân viên giao hàng</string>
    <string name="phieubansi_txt_diachi">Địa chỉ</string>
    <string name="phieubansi_et_hint_diachi">Nhập địa chỉ</string>
    <string name="phieubansi_txt_dienthoai">Điện thoại</string>
    <string name="phieubansi_et_hint_dienthoai">Nhập điện thoại</string>
    <string name="phieubansi_txt_ghichu">Ghi chú</string>
    <string name="phieubansi_et_hint_ghichu">Nhập ghi chú</string>
    <string name="phieubansi_txt_tongtientt">Tổng cộng:</string>
    <string name="phieubansi_btn_txt_luu">LƯU</string>
    <string name="phieubansi_txt_kho">Kho</string>
    <string name="phieubansi_et_hint_kho">Chọn kho</string>
    <string name="phieubansi_txt_soct">Số phiếu</string>
    <string name="phieubansi_et_hint_soct">Mã tự sinh</string>
    <string name="phieubansi_txt_ngay">Ngày</string>
    <string name="phieubansidetail_tieudeform">Chi tiết đơn hàng</string>
    <string name="phieubansi_detail_general_info_ngay">Ngày</string>
    <string name="themkhachhang_et_hint_timkiem">Tìm tên khách hàng, điện thoại, địa chỉ,...</string>
    <string name="themkhachhang_et_hint_makhachhang">Mã tự động sinh</string>
    <string name="themkhachhang_et_hint_tenkhachhang">Tên khách hàng</string>
    <string name="themkhachhang_txt_phone">Số điện thoại 1</string>
    <string name="themkhachhang_txt_dtdd">Số điện thoại 2</string>
    <string name="themkhachhang_txt_sdt1">Số điện thoại 3</string>
    <string name="themkhachhang_txt_sdt2">Số điện thoại 4</string>
    <string name="themkhachhang_et_diachiso">Địa chỉ số</string>
    <string name="themkhachhang_txt_diachiso">Địa chỉ số</string>
    <string name="themkhachhang_txt_phuongxa">Phường/Xã</string>
    <string name="themkhachhang_txt_quanhuyen">Quận/Huyện</string>
    <string name="themkhachhang_txt_tinhthanhpho">Tỉnh/TP</string>
    <string name="themkhachhang_txt_sanphamsudung">Sản phẩm sử dụng</string>
    <string name="themkhachhang_txt_nhomkhachhang">Nhóm khách hàng</string>
    <string name="dialog_capnhatnhanvien_txt_nhanvien">Nhân viên</string>
    <string name="dialog_capnhatnhanvien_et_hint_nhanvien">Chọn nhân viên</string>
</resources>