<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/includeTitle"
        layout="@layout/layout_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/includeTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlNhanVien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewNhanVien"
                style="@style/AppTheme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_capnhatnhanvien_txt_nhanvien"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNhanVien">

                <EditText
                    android:id="@+id/etNhanVien"
                    style="@style/AppTheme.EditText.NoEdit.DropDownList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:hint="@string/dialog_capnhatnhanvien_et_hint_nhanvien"
                    android:padding="@dimen/edittext_padding_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctlNhanVien">

            <Button
                android:id="@+id/btnCancel"
                style="@style/AppTheme.Button.Transparent"
                android:layout_width="80dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginEnd="4dp"
                android:text="@string/dialog_btn_cancel"
                android:textSize="@dimen/title_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnOK"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnOK"
                style="@style/AppTheme.Button.Transparent"
                android:layout_width="80dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="4dp"
                android:text="@string/dialog_btn_ok"
                android:textSize="@dimen/title_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>